objects/Preformance_Review__c.object
<CustomObject>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <inlineHelpText>Performance Level 
PCI = Preformance Check In
PIP = Performance Improvement Plan</inlineHelpText>
        <label>Employee Status</label>
        <picklist>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expected Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Preformance_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Preformance_Reviews2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Preformance_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <label>Recruiter</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Preformance Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Preformance Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preformance Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>